--- a/custom-falco-rules.yaml
+++ b/custom-falco-rules.yaml
@@ -1,2 +1,37 @@
 - list: common_processes
   items: [bash, sh, ls, rm]
+
+- list: common_event_types
+  items: [execve, execveat]
+
+# Falco custom rules collection
+
+- rule: Uncommon Process Execution
+  desc: Detects execution of an uncommon process
+  condition: >
+    evt.type in (common_event_types) and evt.dir=< and not proc.name in (common_processes)
+  output: >
+    Unexpected EXECVE process execution: 
+    process=%proc.name 
+    command=%proc.cmdline 
+    parent=%proc.pname 
+    path=%proc.cwd 
+    ( 
+      file=%fd.name 
+      gparent=%proc.aname[2] 
+      ggparent=%proc.aname[3] 
+      gggparent=%proc.aname[4] 
+      evt_type=%evt.type 
+      user=%user.name 
+      user_uid=%user.uid 
+      user_loginuid=%user.loginuid 
+      user_loginname=%user.loginname 
+      process=%proc.name 
+      proc_exepath=%proc.exepath 
+      parent=%proc.pname 
+      command=%proc.cmdline 
+      terminal=%proc.tty 
+      exe_flags=%evt.arg.flags 
+      %container.info
+    )
+  priority: WARNING
