--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout Rules Repo
         uses: actions/checkout@v3
         with:
-          path: ./
+          path: $GITHUB_WORKSPACE
 
       - name: Upload OCI artifacts to GitHub packages
         run: |
