--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Checkout Rules Repo
         uses: actions/checkout@v3
-        with:
-          path: $GITHUB_WORKSPACE
+        # with:
+        #   path: rules
 
       - name: Upload OCI artifacts to GitHub packages
         run: |
