--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Checkout Rules Repo
         uses: actions/checkout@v3
-        # with:
-        #   path: rules
+        with:
+          path: rules
 
       - name: Upload OCI artifacts to GitHub packages
         run: |
@@ -52,6 +52,6 @@ jobs:
              --type rulesfile \
              --version ${OCI_ARTIFACT_VERSION} \
              ${OCI_REGISTRY}/${GITHUB_REPOSITORY}/${OCI_ARTIFACT_NAME}:${OCI_ARTIFACT_VERSION} \
-             ${RULESET_FILE}             
+             rules/${RULESET_FILE}             
         env:
           FALCOCTL_REGISTRY_AUTH_BASIC: ${{ env.OCI_REGISTRY }},${{ github.repository_owner }},${{ secrets.GITHUB_TOKEN }}
