--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,12 +46,13 @@ jobs:
           path: rules
 
       - name: Upload OCI artifacts to GitHub packages
+        working-directory: '${{ github.workspace }}/rules'
         run: |
              tools/falcoctl/falcoctl registry push \
              --config /dev/null \
              --type rulesfile \
              --version ${OCI_ARTIFACT_VERSION} \
              ${OCI_REGISTRY}/${GITHUB_REPOSITORY}/${OCI_ARTIFACT_NAME}:${OCI_ARTIFACT_VERSION} \
-             rules/${RULESET_FILE}             
+             ${RULESET_FILE}             
         env:
           FALCOCTL_REGISTRY_AUTH_BASIC: ${{ env.OCI_REGISTRY }},${{ github.repository_owner }},${{ secrets.GITHUB_TOKEN }}
