--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload OCI artifacts to GitHub packages
         working-directory: '${{ github.workspace }}/rules'
         run: |
-             tools/falcoctl/falcoctl registry push \
+             ${{ github.workspace }}/tools/falcoctl/falcoctl registry push \
              --config /dev/null \
              --type rulesfile \
              --version ${OCI_ARTIFACT_VERSION} \
