--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -1,8 +1,23 @@
-- list: common_processes
-  items: [bash, sh, ls, rm, sleep]
+- list: file_readers
+  items: [cat]
 
-- list: common_event_types
-  items: [execve, execveat]
+- rule: Access files with sensitive content
+  desc: >
+    An attempt to read files with sensitive content
+  condition: >
+    open_read
+    and sensitive_files
+    and proc_name_exists
+    and proc.name in (file_readers)
+  output: Sensitive file opened for reading by known file readers (file=%fd.name gparent=%proc.aname[2] ggparent=%proc.aname[3] gggparent=%proc.aname[4] evt_type=%evt.type user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid process=%proc.name proc_exepath=%proc.exepath parent=%proc.pname command=%proc.cmdline terminal=%proc.tty exe_flags=%evt.arg.flags %container.info)
+  priority: WARNING
+  tags: [access_sensitive_content]
+
+# - list: common_processes
+#   items: [bash, sh, ls, rm, sleep]
+
+# - list: common_event_types
+#   items: [execve, execveat]
 
 # Falco custom rules collection
 
