--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -1,3 +1,6 @@
+- list: common_event_types
+  items: [execve, execveat]
+
 - list: file_readers
   items: [cat]
 
@@ -5,6 +8,8 @@
   desc: >
     An attempt to read files with sensitive content
   condition: >
+    evt.type in (common_event_types) 
+    and evt.dir=<
     open_read
     and sensitive_files
     and proc_name_exists
@@ -13,11 +18,43 @@
   priority: WARNING
   tags: [access_sensitive_content]
 
+#   
+- macro: container
+  condition: container.id != host
+
+- macro: spawned_process
+  condition: evt.type = execve and evt.dir = <
+
+- list: userexec_binaries
+  items: [sudo, su]
+
+- list: known_binaries
+  items: [shell_binaries, userexec_binaries]
+
+- macro: safe_procs
+  condition: proc.name in (known_binaries)
+
+- list: shell_binaries
+  items: [bash, csh, ksh, sh, tcsh, zsh, dash]
+
+- macro: shell_procs
+  condition: proc.name in (shell_binaries)
+
+- rule: shell_in_container
+  desc: notice shell activity within a container
+  condition: >
+    spawned_process and 
+    container and 
+    shell_procs    
+  output: >
+    shell in a container
+    (user=%user.name container_id=%container.id container_name=%container.name 
+    shell=%proc.name parent=%proc.pname cmdline=%proc.cmdline)    
+  priority: WARNING
+
+
 # - list: common_processes
 #   items: [bash, sh, ls, rm, sleep]
-
-# - list: common_event_types
-#   items: [execve, execveat]
 
 # Falco custom rules collection
 
