--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -46,40 +46,40 @@
 #   output: a tracked program opened a file (user=%user.name command=%proc.cmdline file=%fd.name)
 #   priority: WARNING
 
-# - list: common_event_types
-#   items: [execve, execveat]
+- list: common_event_types
+  items: [execve, execveat]
 
-# - list: common_processes
-#   items: [bash, sh, ls, rm, sleep]
+- list: common_processes
+  items: [bash, sh, ls, rm, sleep]
 
 # Falco custom rules collection
 
-# - rule: Uncommon Process Execution
-#   desc: Detects execution of an uncommon process
-#   condition: >
-#     evt.type in (common_event_types) and evt.dir=< and not proc.name in (common_processes)
-#   output: >
-#     Unexpected EXECVE process execution: 
-#     process=%proc.name 
-#     command=%proc.cmdline 
-#     parent=%proc.pname 
-#     path=%proc.cwd 
-#     ( 
-#       file=%fd.name 
-#       gparent=%proc.aname[2] 
-#       ggparent=%proc.aname[3] 
-#       gggparent=%proc.aname[4] 
-#       evt_type=%evt.type 
-#       user=%user.name 
-#       user_uid=%user.uid 
-#       user_loginuid=%user.loginuid 
-#       user_loginname=%user.loginname 
-#       process=%proc.name 
-#       proc_exepath=%proc.exepath 
-#       parent=%proc.pname 
-#       command=%proc.cmdline 
-#       terminal=%proc.tty 
-#       exe_flags=%evt.arg.flags 
-#       %container.info
-#     )
-#   priority: WARNING
+- rule: Uncommon Process Execution
+  desc: Detects execution of an uncommon process
+  condition: >
+    evt.type in (common_event_types) and evt.dir=< and not proc.name in (common_processes)
+  output: >
+    Unexpected EXECVE process execution: 
+    process=%proc.name 
+    command=%proc.cmdline 
+    parent=%proc.pname 
+    path=%proc.cwd 
+    ( 
+      file=%fd.name 
+      gparent=%proc.aname[2] 
+      ggparent=%proc.aname[3] 
+      gggparent=%proc.aname[4] 
+      evt_type=%evt.type 
+      user=%user.name 
+      user_uid=%user.uid 
+      user_loginuid=%user.loginuid 
+      user_loginname=%user.loginname 
+      process=%proc.name 
+      proc_exepath=%proc.exepath 
+      parent=%proc.pname 
+      command=%proc.cmdline 
+      terminal=%proc.tty 
+      exe_flags=%evt.arg.flags 
+      %container.info
+    )
+  priority: WARNING
