--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -94,3 +94,37 @@
       %container.info
     )
   priority: WARNING
+
+- rule: Privileged actions on K8S Nodes
+  desc: Detects execution of privileged actions performed on k8s nodes
+  enabled: true
+  condition: >
+    k8s_node
+    and evt.type in (common_event_types) 
+    and evt.dir=< 
+    and not proc.name in (common_processes)
+    and non_systemd
+  output: >
+    Detected privileged action: 
+    process=%proc.name 
+    command=%proc.cmdline 
+    parent=%proc.pname 
+    path=%proc.cwd 
+    ( 
+      file=%fd.name 
+      proc_ancestor=%proc.aname
+      evt_type=%evt.type 
+      user=%user.name 
+      user_uid=%user.uid 
+      user_loginuid=%user.loginuid 
+      user_loginname=%user.loginname 
+      process=%proc.name 
+      proc_exepath=%proc.exepath 
+      parent=%proc.pname 
+      command=%proc.cmdline 
+      terminal=%proc.tty 
+      exe_flags=%evt.arg.flags 
+      %container.info
+    )
+  priority: WARNING
+  tags: [privileged_actions, host]
