add explicit proc ancestors

--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -115,7 +115,9 @@
     path=%proc.cwd 
     ( 
       file=%fd.name 
-      proc_ancestor=%proc.aname
+      gparent=%proc.aname[2] 
+      ggparent=%proc.aname[3] 
+      gggparent=%proc.aname[4] 
       evt_type=%evt.type 
       user=%user.name 
       user_uid=%user.uid 
