--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -135,3 +135,47 @@
     )
   priority: WARNING
   tags: [privileged_actions, host]
+
+# In containers, the user name might be for a uid that exists in the
+# container but not on the host. (See
+# https://github.com/draios/sysdig/issues/954). So in that case, allow
+# a setuid.
+- macro: known_user_in_container
+  condition: (container and user.name != "N/A")
+
+- macro: somebody_becoming_themselves
+  condition: ((user.name=nobody and evt.arg.uid=nobody) or
+              (user.name=www-data and evt.arg.uid=www-data) or
+              (user.name=_apt and evt.arg.uid=_apt) or
+              (user.name=postfix and evt.arg.uid=postfix) or
+              (user.name=pki-agent and evt.arg.uid=pki-agent) or
+              (user.name=pki-acme and evt.arg.uid=pki-acme) or
+              (user.name=nfsnobody and evt.arg.uid=nfsnobody) or
+              (user.name=postgres and evt.arg.uid=postgres))
+
+# Add conditions to this macro (probably in a separate file,
+# overwriting this macro) to allow for specific combinations of
+# programs changing users by calling setuid.
+#
+# In this file, it just takes one of the condition in the base macro
+# and repeats it.
+- macro: user_known_non_sudo_setuid_conditions
+  condition: (user.name=root)
+
+  # sshd, mail programs attempt to setuid to root even when running as non-root. Excluding here to avoid meaningless FPs
+- rule: Non sudo setuid
+  desc: >
+    Detect attempts to change users through the use of setuid, with exceptions for sudo/su. 
+    The users "root" and "nobody" using setuid on themselves are also excluded, as setuid calls in these cases 
+    typically involve reducing privileges. By setting the setuid bit, an attacker could execute code in a 
+    different user's context, potentially with higher privileges. One drawback is the potential for noise, 
+    as many applications legitimately use this approach.
+  condition: >
+    evt.type=setuid and evt.dir=>
+    and (known_user_in_container or not container)
+    and not (user.name=root or user.uid=0)
+    and not somebody_becoming_themselves
+    and not user_known_non_sudo_setuid_conditions
+  output: Unexpected setuid call by non-sudo, non-root program (arg_uid=%evt.arg.uid evt_type=%evt.type user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid process=%proc.name proc_exepath=%proc.exepath parent=%proc.pname command=%proc.cmdline terminal=%proc.tty %container.info)
+  priority: NOTICE
+  tags: [maturity_incubating, host, container, users, mitre_privilege_escalation, T1548.001]
