--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -164,7 +164,7 @@
 
   # sshd, mail programs attempt to setuid to root even when running as non-root. Excluding here to avoid meaningless FPs
 - rule: Non sudo setuid
-  enabled: false
+  enabled: true
   desc: >
     Detect attempts to change users through the use of setuid, with exceptions for sudo/su. 
     The users "root" and "nobody" using setuid on themselves are also excluded, as setuid calls in these cases 
@@ -172,8 +172,8 @@
     different user's context, potentially with higher privileges. One drawback is the potential for noise, 
     as many applications legitimately use this approach.
   condition: >
-    evt.type=setuid and evt.dir=>
-    and (known_user_in_container or not container)
+    k8s_node
+    and evt.type=setuid and evt.dir=>
     and not (user.name=root or user.uid=0)
     and not user_known_non_sudo_setuid_conditions
   output: Unexpected setuid call by non-sudo, non-root program (arg_uid=%evt.arg.uid evt_type=%evt.type user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid process=%proc.name proc_exepath=%proc.exepath parent=%proc.pname command=%proc.cmdline terminal=%proc.tty %container.info)
