--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -62,7 +62,7 @@
 
 - rule: Uncommon Process Execution on K8S Nodes
   desc: Detects execution of an uncommon process
-  enabled: true
+  enabled: false
   condition: >
     k8s_node
     and evt.type in (common_event_types) 
@@ -164,7 +164,7 @@
 
   # sshd, mail programs attempt to setuid to root even when running as non-root. Excluding here to avoid meaningless FPs
 - rule: Non sudo setuid
-  enabled: true
+  enabled: false
   desc: >
     Detect attempts to change users through the use of setuid, with exceptions for sudo/su. 
     The users "root" and "nobody" using setuid on themselves are also excluded, as setuid calls in these cases 
