--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -95,47 +95,6 @@
     )
   priority: WARNING
 
-- macro: privileged_access_commands
-  condition: proc.aname in (userexec_binaries)
-
-- rule: Privileged actions on K8S Nodes
-  desc: Detects execution of privileged actions performed on k8s nodes
-  enabled: true
-  condition: >
-    k8s_node
-    and evt.type in (common_event_types)
-    and evt.res=SUCCESS 
-    and evt.dir=< 
-    and not proc.name in (common_processes)
-    and privileged_access_commands
-  output: >
-    Detected privileged action: 
-    process=%proc.name
-    command=%proc.cmdline 
-    path=%proc.cwd 
-    event=(%evt.res %evt.rawres %evt.failed)
-    ( 
-      file=%fd.name
-      parent=%proc.pname
-      gparent=%proc.aname[2]
-      ggparent=%proc.aname[3]
-      aname[4]=%proc.aname[4]
-      aname[5]=%proc.aname[5]
-      aname[6]=%proc.aname[6]
-      aname[7]=%proc.aname[7]
-      evt_type=%evt.type 
-      user=%user.name 
-      user_uid=%user.uid 
-      user_loginuid=%user.loginuid 
-      user_loginname=%user.loginname 
-      proc_exepath=%proc.exepath
-      terminal=%proc.tty 
-      exe_flags=%evt.arg.flags 
-      %container.info
-    )
-  priority: WARNING
-  tags: [privileged_actions, host]
-
 # In containers, the user name might be for a uid that exists in the
 # container but not on the host. (See
 # https://github.com/draios/sysdig/issues/954). So in that case, allow
@@ -179,3 +138,67 @@
   output: Unexpected setuid call by non-sudo, non-root program (arg_uid=%evt.arg.uid evt_type=%evt.type user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid process=%proc.name proc_exepath=%proc.exepath parent=%proc.pname command=%proc.cmdline terminal=%proc.tty %container.info)
   priority: NOTICE
   tags: [maturity_incubating, host, container, users, mitre_privilege_escalation, T1548.001]
+
+  #########################
+
+  - macro: privileged_access_commands
+  condition: proc.aname in (userexec_binaries)
+
+- rule: Privileged actions on K8S Nodes
+  desc: Detects execution of privileged actions performed on k8s nodes
+  enabled: true
+  condition: >
+    k8s_node
+    and evt.type in (execve, execveat) and evt.dir=<
+    and (user.uid = 0 or group.gid = 0) 
+    and not system_users
+    and interactive
+    and not proc.name in (cron_binaries)
+    and not ansible_running_python
+  output: >
+    Detected privileged action: 
+    process=%proc.name
+    command=%proc.cmdline 
+    path=%proc.cwd 
+    event=(%evt.type %evt.res %evt.rawres)
+    ( 
+      file=%fd.name
+      parent=%proc.pname
+      gparent=%proc.aname[2] ggparent=%proc.aname[3] aname[4]=%proc.aname[4] aname[5]=%proc.aname[5] aname[6]=%proc.aname[6] aname[7]=%proc.aname[7]
+      user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid user_loginname=%user.loginname group_gid=%group.gid
+      proc_exepath=%proc.exepath
+      terminal=%proc.tty 
+      exe_flags=%evt.arg.flags 
+    )
+  priority: WARNING
+  tags: [privileged_actions, host]
+
+- macro: container_entrypoint
+  condition: (not proc.pname exists or proc.pname in (runc:[0:PARENT],
+    runc:[1:CHILD], runc, docker-runc, exe, docker-runc-cur))
+
+- rule: Privileged actions on containers
+  desc: Detects execution of privileged actions performed on containers
+  enabled: true
+  condition: >
+    container
+    and evt.type in (execve, execveat) and evt.dir=<
+    and not container_entrypoint
+  output: >
+    Detected privileged action: 
+    process=%proc.name
+    command=%proc.cmdline 
+    path=%proc.cwd 
+    event=(%evt.type %evt.res %evt.rawres)
+    ( 
+      file=%fd.name
+      parent=%proc.pname
+      gparent=%proc.aname[2] ggparent=%proc.aname[3] aname[4]=%proc.aname[4] aname[5]=%proc.aname[5] aname[6]=%proc.aname[6] aname[7]=%proc.aname[7]
+      user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid user_loginname=%user.loginname group_gid=%group.gid
+      proc_exepath=%proc.exepath
+      terminal=%proc.tty 
+      exe_flags=%evt.arg.flags
+      %container.info
+    )
+  priority: WARNING
+  tags: [privileged_actions, container]
