--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -10,25 +10,26 @@
 - macro: shell_procs
   condition: (proc.name in (shell_binaries))
 
-- macro: container_entrypoint
-  condition: (not proc.pname exists or proc.pname in (runc:[0:PARENT], runc:[1:CHILD], runc, docker-runc, exe, docker-runc-cur, containerd-shim, systemd, crio))
+# - macro: container_entrypoint
+#   condition: (not proc.pname exists or proc.pname in (runc:[0:PARENT], 
+#     runc:[1:CHILD], runc, docker-runc, exe, docker-runc-cur, containerd-shim, systemd, crio))
 
-- rule: Terminal shell in container
-  desc: >
-    A shell was used as the entrypoint/exec point into a container with an attached terminal. Parent process may have 
-    legitimately already exited and be null (read container_entrypoint macro). Common when using "kubectl exec" in Kubernetes. 
-    Correlate with k8saudit exec logs if possible to find user or serviceaccount token used (fuzzy correlation by namespace and pod name). 
-    Rather than considering it a standalone rule, it may be best used as generic auditing rule while examining other triggered 
-    rules in this container/tty.
-  condition: >
-    spawned_process 
-    and container
-    and shell_procs 
-    and proc.tty != 0
-    and container_entrypoint
-  output: A shell was spawned in a container with an attached terminal (evt_type=%evt.type user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid process=%proc.name proc_exepath=%proc.exepath parent=%proc.pname command=%proc.cmdline terminal=%proc.tty exe_flags=%evt.arg.flags %container.info)
-  priority: NOTICE
-  tags: [maturity_stable, container, shell, mitre_execution, T1059]
+# - rule: Terminal shell in container
+#   desc: >
+#     A shell was used as the entrypoint/exec point into a container with an attached terminal. Parent process may have 
+#     legitimately already exited and be null (read container_entrypoint macro). Common when using "kubectl exec" in Kubernetes. 
+#     Correlate with k8saudit exec logs if possible to find user or serviceaccount token used (fuzzy correlation by namespace and pod name). 
+#     Rather than considering it a standalone rule, it may be best used as generic auditing rule while examining other triggered 
+#     rules in this container/tty.
+#   condition: >
+#     spawned_process 
+#     and container
+#     and shell_procs 
+#     and proc.tty != 0
+#     and container_entrypoint
+#   output: A shell was spawned in a container with an attached terminal (evt_type=%evt.type user=%user.name user_uid=%user.uid user_loginuid=%user.loginuid process=%proc.name proc_exepath=%proc.exepath parent=%proc.pname command=%proc.cmdline terminal=%proc.tty exe_flags=%evt.arg.flags %container.info)
+#   priority: NOTICE
+#   tags: [maturity_stable, container, shell, mitre_execution, T1059]
 
 
 - list: open_file_dir_event_types
@@ -139,13 +140,13 @@
   priority: NOTICE
   tags: [maturity_incubating, host, container, users, mitre_privilege_escalation, T1548.001]
 
-  #########################
+#########################
 
 - macro: privileged_access_commands
   condition: proc.aname in (userexec_binaries)
 
-- rule: Privileged actions on K8S Nodes
-  desc: Detects execution of privileged actions performed on k8s nodes
+- rule: Privileged actions on hosts
+  desc: Detects execution of privileged actions performed on hosts
   enabled: true
   condition: >
     k8s_node
@@ -155,8 +156,9 @@
     and interactive
     and not proc.name in (cron_binaries)
     and not ansible_running_python
+    and not run_by_chef
   output: >
-    Detected privileged action: 
+    Detected privileged action on host: 
     process=%proc.name
     command=%proc.cmdline 
     path=%proc.cwd 
@@ -173,10 +175,6 @@
   priority: WARNING
   tags: [privileged_actions, host]
 
-- macro: container_entrypoint
-  condition: (not proc.pname exists or proc.pname in (runc:[0:PARENT],
-    runc:[1:CHILD], runc, docker-runc, exe, docker-runc-cur))
-
 - rule: Privileged actions on containers
   desc: Detects execution of privileged actions performed on containers
   enabled: true
@@ -185,7 +183,7 @@
     and evt.type in (execve, execveat) and evt.dir=<
     and not container_entrypoint
   output: >
-    Detected privileged action: 
+    Detected privileged action on container: 
     process=%proc.name
     command=%proc.cmdline 
     path=%proc.cwd 
