--- a/custom_falco_rules.yaml
+++ b/custom_falco_rules.yaml
@@ -153,7 +153,7 @@
     and evt.type in (execve, execveat) and evt.dir=<
     and (user.uid = 0 or group.gid = 0) 
     and not system_users
-    and interactive and proc.tty != 0
+    and (interactive or proc.aname in (shell_binaries)) and proc.tty != 0
     and not proc.name in (cron_binaries)
     and not ansible_running_python
     and not run_by_chef
