--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
       # look something like ghcr.io/user/repo/custom-rules:main
       OCI_ARTIFACT_NAME: custom-rules
       # OCI_ARTIFACT_VERSION: ${{ github.ref_name }}
-      OCI_ARTIFACT_VERSION: latest
+      OCI_ARTIFACT_VERSION: 2
 
     steps:
 
@@ -53,7 +53,7 @@ jobs:
              --config /dev/null \
              --type rulesfile \
              --version ${OCI_ARTIFACT_VERSION} \
-             --tag 1 --tag 1.0 --tag 1.0.0 \
+             --tag 2.0 --tag 2.0.0 \
              ${OCI_REGISTRY}/${GITHUB_REPOSITORY}/${OCI_ARTIFACT_NAME}:${OCI_ARTIFACT_VERSION} \
              ${RULESET_FILE}             
         env:
