--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,7 @@ jobs:
       # look something like ghcr.io/user/repo/custom-rules:main
       OCI_ARTIFACT_NAME: custom-rules
       # OCI_ARTIFACT_VERSION: ${{ github.ref_name }}
+      OCI_ARTIFACT_VERSION: 1.0.1
 
     steps:
 
@@ -51,8 +52,8 @@ jobs:
              ${{ github.workspace }}/tools/falcoctl/falcoctl registry push \
              --config /dev/null \
              --type rulesfile \
-             --version 1.0.0 \
-             --tag 1 --tag 1.0 --tag 1.0.0 \
+             --version ${OCI_ARTIFACT_VERSION} \
+             --tag ${OCI_ARTIFACT_VERSION} \
              ${OCI_REGISTRY}/${GITHUB_REPOSITORY}/${OCI_ARTIFACT_NAME}:latest \
              ${RULESET_FILE}             
         env:
