--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,9 +21,13 @@ jobs:
       OCI_ARTIFACT_NAME: custom-rules
       # OCI_ARTIFACT_VERSION: ${{ github.ref_name }}
       OCI_ARTIFACT_VERSION: 1.0.1
-      GITHUB_SHORT_COMMIT_HASH: ${{git rev-parse --short "$GITHUB_SHA"}}
 
     steps:
+
+      - name: Set short git commit SHA
+        run: |
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
 
       - name: Checkout Falcoctl Repo
         uses: actions/checkout@v3
@@ -54,7 +58,7 @@ jobs:
              --config /dev/null \
              --type rulesfile \
              --version ${OCI_ARTIFACT_VERSION} \
-             --tag ${OCI_ARTIFACT_VERSION} --tag ${GITHUB_SHORT_COMMIT_HASH} \
+             --tag ${OCI_ARTIFACT_VERSION} --tag ${COMMIT_SHORT_SHA} \
              ${OCI_REGISTRY}/${GITHUB_REPOSITORY}/${OCI_ARTIFACT_NAME}:latest \
              ${RULESET_FILE}             
         env:
