--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,11 +24,6 @@ jobs:
 
     steps:
 
-      - name: Set short git commit SHA
-        run: |
-          calculatedSha=$(git rev-parse --short ${{ github.sha }})
-          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
-
       - name: Checkout Falcoctl Repo
         uses: actions/checkout@v3
         with:
@@ -50,6 +45,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: rules
+
+      - name: Set short git commit SHA
+        working-directory: '${{ github.workspace }}'
+        run: |
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
 
       - name: Upload OCI artifacts to GitHub packages
         working-directory: '${{ github.workspace }}/rules'
