--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,11 +46,8 @@ jobs:
         with:
           path: rules
 
-      - name: Set short git commit SHA
-        working-directory: '${{ github.workspace }}'
-        run: |
-          calculatedSha=$(/usr/bin/git rev-parse --short ${{ github.sha }})
-          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
+      - name: Get Short GitHub SHA and Save in Environment Variable
+        run: echo "SHORT_GITHUB_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Upload OCI artifacts to GitHub packages
         working-directory: '${{ github.workspace }}/rules'
@@ -59,7 +56,7 @@ jobs:
              --config /dev/null \
              --type rulesfile \
              --version ${OCI_ARTIFACT_VERSION} \
-             --tag ${OCI_ARTIFACT_VERSION} --tag ${COMMIT_SHORT_SHA} \
+             --tag ${OCI_ARTIFACT_VERSION} --tag ${SHORT_GITHUB_SHA} \
              ${OCI_REGISTRY}/${GITHUB_REPOSITORY}/${OCI_ARTIFACT_NAME}:latest \
              ${RULESET_FILE}             
         env:
